[gd_scene load_steps=19 format=3 uid="uid://dm3ux4vmhsrn2"]

[ext_resource type="Script" uid="uid://14gpha7hvjdo" path="res://scripts/pong_main.gd" id="1_leq2b"]
[ext_resource type="FontFile" uid="uid://sikvy487dffv" path="res://assets/fonts/OpenDyslexic-Bold.otf" id="2_wypss"]
[ext_resource type="Texture2D" uid="uid://cviafs7mqce0t" path="res://assets/images/PlayButton3D.png" id="3_eqmox"]
[ext_resource type="Texture2D" uid="uid://bqa3jqmdu20un" path="res://assets/images/PlayButton3D-Pressed.png" id="4_djn4o"]
[ext_resource type="Texture2D" uid="uid://brgx5tiwo4tqi" path="res://assets/images/BackButton3D.png" id="5_xudlq"]
[ext_resource type="Texture2D" uid="uid://c52cvlindb1xy" path="res://assets/images/BackButton3D-Pressed.png" id="6_x16ys"]
[ext_resource type="Texture2D" uid="uid://c1pnjnbh30ed6" path="res://assets/images/youwon2-removebg-preview.png" id="7_cgql7"]
[ext_resource type="PackedScene" uid="uid://blgmqtioth6ia" path="res://scenes/player_paddle.tscn" id="8_wk3nx"]
[ext_resource type="PackedScene" uid="uid://b74b8enyq84tq" path="res://scenes/ai_paddle.tscn" id="8_wypss"]
[ext_resource type="PackedScene" uid="uid://w71s7rnddw5s" path="res://scenes/pong_ball.tscn" id="9_jo068"]
[ext_resource type="Script" uid="uid://cbk3idw08ehr7" path="res://scripts/pong_area.gd" id="10_c73dh"]
[ext_resource type="Script" uid="uid://hboiiu52krtn" path="res://scripts/power_ups_area.gd" id="11_t4sog"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yecbn"]
bg_color = Color(0.716296, 0.716296, 0.716296, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kgt8m"]
size = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aveyr"]
size = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbin8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5nuk5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g6wrq"]

[node name="PongDouble" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_leq2b")

[node name="GameOverScreen" type="CanvasLayer" parent="."]
layer = 3

[node name="GameOverScreen" type="Control" parent="GameOverScreen"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverBG" type="ColorRect" parent="GameOverScreen/GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.88, 0.7216, 0.484, 1)

[node name="Panel" type="Panel" parent="GameOverScreen/GameOverScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.013
anchor_right = 0.993
anchor_bottom = 0.988
offset_left = -0.2
offset_top = 0.259999
offset_right = 0.0400391
offset_bottom = -0.240051
theme_override_styles/panel = SubResource("StyleBoxFlat_yecbn")

[node name="goScore" type="Label" parent="GameOverScreen/GameOverScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.642
anchor_top = 0.153
anchor_right = 0.764
anchor_bottom = 0.482
offset_left = 87.76
offset_top = 0.0599823
offset_right = 321.92
offset_bottom = -234.36
rotation = 1.5708
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_wypss")
theme_override_font_sizes/font_size = 50
text = "Score:"

[node name="goHighScore" type="Label" parent="GameOverScreen/GameOverScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.423
anchor_top = 0.153
anchor_right = 0.546
anchor_bottom = 0.482
offset_left = 88.27
offset_top = 0.0599823
offset_right = 321.71
offset_bottom = -234.36
rotation = 1.5708
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_wypss")
theme_override_font_sizes/font_size = 50
text = "High Score:"

[node name="GameOver" type="Label" parent="GameOverScreen/GameOverScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.847
anchor_top = 0.307
anchor_right = 0.982
anchor_bottom = 0.663
offset_left = 97.16
offset_top = 0.139984
offset_right = 271.96
offset_bottom = -278.74
rotation = 1.5708
theme_override_fonts/font = ExtResource("2_wypss")
theme_override_font_sizes/font_size = 55
text = "Game Over!"

[node name="PlayButton" type="TextureButton" parent="GameOverScreen/GameOverScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.077
anchor_top = 0.401
anchor_right = 0.251
anchor_bottom = 0.617
offset_left = 125.56
offset_top = 0.0199585
offset_right = 160.28
offset_bottom = -116.66
rotation = 1.5708
scale = Vector2(1.325, 1.325)
texture_normal = ExtResource("3_eqmox")
texture_pressed = ExtResource("4_djn4o")

[node name="BackButton" type="TextureButton" parent="GameOverScreen/GameOverScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.801
anchor_top = 0.045
anchor_right = 0.958
anchor_bottom = 0.149
offset_left = 113.28
offset_top = -0.100002
offset_right = 90.2399
offset_bottom = -2.02
rotation = 1.5708
scale = Vector2(1.135, 1.135)
texture_normal = ExtResource("5_xudlq")
texture_pressed = ExtResource("6_x16ys")

[node name="Trophy" type="Control" parent="GameOverScreen/GameOverScreen"]
visible = false
layout_mode = 1
anchor_left = 0.611
anchor_top = 0.847
anchor_right = 0.611
anchor_bottom = 0.847
offset_left = 0.0799866
offset_top = -0.0600586
offset_right = 0.0799866
offset_bottom = -0.0600586
rotation = 1.5708
scale = Vector2(1.27, 1.27)

[node name="youWon" type="Sprite2D" parent="GameOverScreen/GameOverScreen/Trophy"]
position = Vector2(-22, -27)
scale = Vector2(0.690395, 0.67757)
texture = ExtResource("7_cgql7")

[node name="trophyLabel" type="Label" parent="GameOverScreen/GameOverScreen/Trophy"]
layout_mode = 1
offset_left = -137.008
offset_top = 43.3076
offset_right = 96.9923
offset_bottom = 91.3076
theme_override_colors/font_color = Color(1, 0.883333, 0, 1)
theme_override_fonts/font = ExtResource("2_wypss")
theme_override_font_sizes/font_size = 27
text = "New High Score!"

[node name="objectLayer" type="CanvasLayer" parent="."]

[node name="playerTop" parent="objectLayer" instance=ExtResource("8_wypss")]
position = Vector2(344, 98)
screen_position = 15.5

[node name="playerBottom" parent="objectLayer" node_paths=PackedStringArray("area") instance=ExtResource("8_wk3nx")]
position = Vector2(353, 885)
screen_position = 2.3
area = NodePath("../../ControlAreaBottom")

[node name="pongBall" parent="objectLayer" instance=ExtResource("9_jo068")]
position = Vector2(360, 506)

[node name="canvasBackground" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="ColorRect" parent="canvasBackground"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.88, 0.7216, 0.484, 1)

[node name="score" type="Label" parent="canvasBackground"]
anchors_preset = -1
anchor_left = 0.018
anchor_top = 0.393
anchor_right = 0.092
anchor_bottom = 0.597
offset_left = 53.04
offset_top = -0.140015
offset_right = 199.76
offset_bottom = -147.06
rotation = 1.5708
theme_override_fonts/font = ExtResource("2_wypss")
theme_override_font_sizes/font_size = 30
text = "Score: 0"

[node name="highScore" type="Label" parent="canvasBackground"]
anchors_preset = -1
anchor_left = 0.919
anchor_top = 0.36
anchor_right = 0.993
anchor_bottom = 0.672
offset_left = 53.32
offset_top = 0.199982
offset_right = 306.04
offset_bottom = -252.56
rotation = 1.5708
theme_override_fonts/font = ExtResource("2_wypss")
theme_override_font_sizes/font_size = 30
text = "High Score: 0"

[node name="ControlAreaTop" type="Area2D" parent="."]
position = Vector2(346, 56)
script = ExtResource("10_c73dh")
screen_position = 22.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ControlAreaTop"]
shape = SubResource("RectangleShape2D_kgt8m")

[node name="ControlAreaBottom" type="Area2D" parent="."]
position = Vector2(360, 980)
script = ExtResource("10_c73dh")
screen_position = 2.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ControlAreaBottom"]
shape = SubResource("RectangleShape2D_aveyr")

[node name="PowerUpsArea" type="Node2D" parent="."]
script = ExtResource("11_t4sog")

[node name="Area2D" type="Area2D" parent="PowerUpsArea"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerUpsArea/Area2D"]
shape = SubResource("RectangleShape2D_tbin8")

[node name="LoseTop" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LoseTop"]
shape = SubResource("RectangleShape2D_5nuk5")

[node name="LoseBottom" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LoseBottom"]
shape = SubResource("RectangleShape2D_g6wrq")

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.431
anchor_top = 0.393
anchor_right = 0.569
anchor_bottom = 0.478
offset_left = -0.320007
offset_top = -0.140015
offset_right = 0.320007
offset_bottom = -0.440002
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="GameOverScreen/GameOverScreen/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="GameOverScreen/GameOverScreen/BackButton" to="." method="_on_back_button_pressed"]
